--- a/index.html
+++ b/index.html
@@ -7,19 +7,23 @@
 </head>
 
 <body>
-	<header id="top">
-		<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Title</span>
+	<header>
+		<span style="cursor:pointer" data-bind="click: toggleNav">&#9776;</span><span>Title</span>
 	</header>
-	<nav id="mySidenav" class="sidenav">
-		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-		<a href="#">About</a>
-		<a href="#">Services</a>
-		<a href="#">Clients</a>
-		<a href="#">Contact</a>
+	<nav>
+		<input type="text" class="text-input" id="filter" value="" data-bind="keyup: getValue"/>
+		<span id="filter-count"></span>
+		<ul>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Services</a></li>
+			<li><a href="#">Clients</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
 	</nav>
 	<div id="map"></div>
 
 	<script src="js/jquery-3.2.1.js"></script>
+	<script src="js/knockout-3.4.2.js"></script>
 	<script src="js/main.js"></script>
 	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5Zusczf03RjQryWwOlHxboT0FKawmB7k&libraries=places&callback=initMap"></script>
 </body>
