1. refine async and error handling 2. add comments and README.md

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 		</header>
 		<div id="map"></div>
 	</main>
+	<script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDpEsTHaCisKF2fL30-8WS2-5Xu_brucA&libraries=places&callback=viewModel.initMap" onerror="viewModel.googleMapError(this,event)"></script>
 	<script src="js/jquery-3.2.1.js"></script>
 	<script src="js/knockout-3.4.2.js"></script>
 	<script src="js/main.js"></script>
-	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5Zusczf03RjQryWwOlHxboT0FKawmB7k&libraries=places&callback=viewModel.initMap"></script>
 </body>
 
 </html>
